--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
+html,
+body {
+  height: 100%;
+}
+body {
+  background: #2a8981;
+
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
